refactor: test setup, add missing error details
